upgrade lua script to new version

--- a/conky.conf
+++ b/conky.conf
@@ -1,49 +1,52 @@
-background yes
-update_interval 1
+conky.config = {
+	background = true,
+	update_interval = 1,
 
-cpu_avg_samples 2
-net_avg_samples 2
-temperature_unit celsius
+	cpu_avg_samples = 2,
+	net_avg_samples = 2,
+	temperature_unit = 'celsius',
 
-double_buffer yes
-no_buffers no
-text_buffer_size 4096
+	double_buffer = true,
+	no_buffers = false,
+	text_buffer_size = 4096,
 
-gap_x 30
-gap_y 30
-minimum_size 400 1000
-maximum_width 1000
-own_window yes
-own_window_type override
-own_window_transparent yes
-own_window_hints undecorated,sticky,skip_taskbar,skip_pager,below
-border_inner_margin 0
-border_outer_margin 0
-alignment tr
+	gap_x = 30,
+	gap_y = 30,
+	minimum_width = 400, minimum_height = 1000,
+	maximum_width = 1000,
+	own_window = true,
+	own_window_type = 'override',
+	own_window_transparent = true,
+	own_window_hints = 'undecorated,sticky,skip_taskbar,skip_pager,below',
+	border_inner_margin = 0,
+	border_outer_margin = 0,
+	alignment = 'top_right',
 
-draw_shades no
-draw_outline no
-draw_borders no
-draw_graph_borders no
+	draw_shades = false,
+	draw_outline = false,
+	draw_borders = false,
+	draw_graph_borders = false,
 
-override_utf8_locale yes
-use_xft yes
-xftfont caviar dreams:size=8
-xftalpha 0.5
-uppercase no
+	override_utf8_locale = true,
+	use_xft = true,
+	font = 'caviar dreams:size=8',
+	xftalpha = 0.5,
+	uppercase = false,
 
-default_color 09FFF0
-color1 F0F1A4
-color2 FFFFFF
-color3 FFFFFF
-color4 FFFFFF
-color5 CAF5D1
+	default_color = '#09FFF0',
+	color1 = '#F0F1A4',
+	color2 = '#FFFFFF',
+	color3 = '#FFFFFF',
+	color4 = '#FFFFFF',
+	color5 = '#CAF5D1',
 
-lua_load ~/.conky/conky.lua
-lua_draw_hook_post main
+	lua_load = '~/.conky/conky.lua',
+	lua_draw_hook_post = 'main',
 
-TEXT
-${execpi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t type -p ~/.conky/weather.d/imgs -x 170 -y 125 }
+};
+
+conky.text = [[
+${execpi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t imgs -p ~/.conky/weather.d/imgs -x 170 -y 125 }
 ${voffset -10}${font WenQuanYi Micro Hei Mono:size=10}${color5}能量条A：${battery_percent}% ${battery_bar}
 ${font WenQuanYi Micro Hei Mono:size=10}${color5}能量条B：${battery_percent BAT1}% ${battery_bar BAT1}
 ${font WenQuanYi Micro Hei Mono:size=10}${color5}${execi 60 cat /tmp/update_oilprice.log }
@@ -51,41 +54,48 @@ ${font WenQuanYi Micro Hei Mono:bold:size=10}
 ${voffset -20}${color1}天气更新时间：${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t update_time }
 ${color}${font WenQuanYi Micro Hei Mono:bold:size=15}今天：\
 ${voffset -2}${font WenQuanYi Micro Hei Mono:bold:size=12}${color} \
-${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t province } ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t city }
-${voffset 3}${color3}${font WenQuanYi Micro Hei Mono:bold:size=30}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t wendu }°C
-${goto 220}${voffset -55}${font WenQuanYi Micro Hei Mono:size=40}${color1}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t type }
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t city } ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t city }
+${voffset 3}${color3}${font WenQuanYi Micro Hei Mono:bold:size=30}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t tem }°C
+${goto 220}${voffset -55}${font WenQuanYi Micro Hei Mono:size=40}${color1}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t wea }
 ${font WenQuanYi Micro Hei Mono:size=9}${voffset -60}${color3}
 ${goto 140}${voffset -15}\
-${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t low }°C - ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t high }°C
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t tem1 }°C - ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t tem2 }°C
 ${voffset -15}
-风   力： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t fl }
-PM  2.5： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t pm25 }/立方米
-PM   10： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t pm10 }/立方米
+日   出： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t  sunrise }
+日   落： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t sunset}
+风   力： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t win_speed }
+空气质量： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air }
+污染程度： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air_level }
 ${voffset 0}${color}${font WenQuanYi Micro Hei Mono:size=12}明天：\
-${voffset 1}${font Ubuntu:size=12}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t ymd -d 1} \
-${goto 165}${color1}${font WenQuanYi Micro Hei Mono:size=14}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t type -d 1 } \
-${voffset -5}${color3}${font Ubuntu:size=10}(${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 1 -t low}°C - \
-${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 1 -t high }°C)
+${voffset 1}${font Ubuntu:size=12}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t date -d 1} \
+${goto 165}${color1}${font WenQuanYi Micro Hei Mono:size=14}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t wea -d 1 } \
+${voffset -5}${color3}${font Ubuntu:size=10}(${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 1 -t tem1}°C - \
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 1 -t tem2 }°C)
 ${voffset -15}${color3}${font WenQuanYi Micro Hei Mono:size=9}
-风   力：  ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t fl -d 1 }
-PM  2.5： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t pm25 -d 1 }/立方米
+风   力： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t win_speed -d 1}
+空气质量： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air -d 1}
+污染程度： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air_level -d 1}
 ${voffset 0}${color}${font WenQuanYi Micro Hei Mono:size=12}后天：\
-${voffset 1}${font Ubuntu:size=12}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t ymd -d 2} \
-${goto 165}${color1}${font WenQuanYi Micro Hei Mono:size=14}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t type -d 2 } \
-${voffset -5}${color3}${font Ubuntu:size=10}(${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 2 -t low}°C - \
-${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 2 -t high }°C)
+${voffset 1}${font Ubuntu:size=12}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t date -d 2} \
+${goto 165}${color1}${font WenQuanYi Micro Hei Mono:size=14}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t wea -d 2 } \
+${voffset -5}${color3}${font Ubuntu:size=10}(${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 2 -t tem1}°C - \
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -d 2 -t tem2 }°C)
 ${voffset -15}${color3}${font WenQuanYi Micro Hei Mono:size=9}
-风   力：  ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t fl -d 2 }
-PM  2.5： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t pm25 -d 2 }/立方米
+风   力： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t win_speed -d 2}
+空气质量： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air -d 2}
+污染程度： ${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t air_level -d 2}
 
-${font WenQuanYi Micro Hei Mono:bold:size=12}${color5}${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t notice }
+${font WenQuanYi Micro Hei Mono:bold:size=12}${color5}
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t alarm.alarm_type }
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t alarm.alarm_level }
+${execi 60 /bin/bash ~/.conky/weather.d/pull_weather.sh -t alarm.alarm_content }
 
-${voffset -270}${color1}
-${goto 455}${font ubuntu:bold:size=13}${time %A}
-${goto 475}${font ubuntu:bold:size=13}${time %b}/${time %e}
+${voffset -415}
+${color1}
+${goto 465}${font Ubuntu:bold:size=11}${time %A}
+${goto 475}${font Ubuntu:bold:size=11}${time %b}/${time %e}
 
-${voffset -30}
-${goto 520}${voffset 30}${cpugraph 40,150 FFFFFF FF0000 0 -t -l }
+${goto 520}${voffset 35}${cpugraph 40,150 FFFFFF FF0000 0 -t -l }
 ${voffset -50}
 ${goto 388}${font Ubuntu:bold:size=15}${color}CPU${color3}${font Ubuntu:bold:size=9}/%
 ${goto 388}${font Ubuntu:normal:size=11}${color1}${top name 1}${alignr}${top cpu 1}%
@@ -111,7 +121,7 @@ ${voffset 1}
 ${goto 355}${font Ubuntu:bold:size=18,}${color}NET${alignr}${color2}${font Ubuntu:size=12}${color3}${if_existing /proc/net/route eth0}eth0 ${addr eth0}${endif}
 ${goto 355}${alignr}${color2}${font Ubuntu:size=12}${color3}${if_existing /proc/net/route wlan0}wlan0 ${addr wlan0}${endif}
 ${goto 388}${voffset -17}${font Ubuntu:bold:size=11}${color1}Speed:
-${goto 388}${font Ubuntu:bold:size=9}${color}${offset 10}UP${alignr}DOWN
+${goto 388}${font Ubuntu:bold:size=9}${color}${offset 10}UPLOAD${alignr}DOWNLOAD
 ${if_existing /proc/net/route eth0}\
 ${goto 388}${font Ubuntu:normal:size=9}${color2} eth0: ${color3}${alignc}${upspeedf  eth0} KB/s${alignr 1}${downspeedf  eth0} KB/s
 ${goto 380}${voffset 10}${color1}${upspeedgraph eth0 30,90 FFFFFF FF0000 1024 -t -l }
@@ -136,6 +146,7 @@ ${goto 388}${font Ubuntu:normal:size=9}${color3}${tcp_portmon 1 65535 rip  9}${a
 ${goto 388}${font Ubuntu:normal:size=9}${color3}${tcp_portmon 1 65535 rip  10}${alignr 1}${tcp_portmon 1 65535 rport  10}
 ${voffset -150}
 ${font WenQuanYi Micro Hei Mono:bold:size=15}${color}
-待做事项:
-${font WenQuanYi Micro Hei Mono:bold:size=10}${color3}
-${execi 60 /bin/grep '^\*\* ' ~/workspace/todolist/present.org | grep -v DONE | head -5 }
+]];
+--- 待做事项:
+--- ${font WenQuanYi Micro Hei Mono:bold:size=10}${color3}
+--- ${execi 60 /bin/grep '^\*\* ' ~/workspace/todolist/present.org | grep -v DONE | head -5 }
